# NES_emulator

./: .gitignore  BUS.h  CMakeLists.txt  CPU6502.cpp  CPU6502.h  CPU_tester.cpp  IO_Ports.h  PPU.cpp  PPU.h  README.md  cartridge.cpp  cartridge.h  emulator.h  main.cpp  mapper.cpp  mapper.h
src/: NES.h
src/IO_Ports/: IO_Ports.h
src/bus/: BUS.h
src/ppu/: PPU.cpp
